# skybox-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  add_readonly.py  fix_python_path.py  patch_claude_json.py  pyproject.toml  requirements.txt  smoke_test.py  test_readonly.py
skybox_mcp/: __init__.py  server.py
