[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skybox-mcp"
version = "0.1.0"
description = "MCP server for Skybox (Vivid Seats)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["skybox_mcp"]
