[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skybox-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
    "python-dotenv",
    "uvicorn",
    "starlette",
]

[tool.setuptools.packages.find]
where = ["."]
